--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "express-basic-auth": "^1.2.1",
+    "express-session": "^1.18.0",
     "request": "^2.88.2",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
