--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
     "express": "^4.19.2",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.18.0",
