--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@eslint/js": "^9.0.0",
     "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
     "express": "^4.19.2",
